# Claro

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  build_indicator.sh  config.py  history.py  main.py  mic_indicator.swift  requirements.txt  state_machine.py  test_audio_pipeline.py
.github/workflows/: ci.yml  release.yml
desktop/: index.html  package-lock.json  package.json
desktop/scripts/: build-indicator.sh  generate-stt-fixtures.mjs  prepare-ui-qa.mjs
desktop/src/: App.tsx  index.css  types.ts  ui.tsx
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
desktop/src-tauri/examples/: apple_polish.rs  builtin_polish.rs  download_model.rs  eval_stt.rs  list_devices.rs  show_context.rs  synth_hotkey.rs  test_polish.rs  transcribe_file.rs
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: audio.rs  context.rs  hardware.rs  history.rs  hotkey.rs  inject.rs  lib.rs  llm.rs  main.rs  models.rs  overlay_client.rs  pipeline.rs  polish.rs  settings.rs  state_machine.rs  textproc.rs
desktop/src-tauri/src/stt/: mod.rs  registry.rs  transcribe.rs  whisper.rs
desktop/src-tauri/swift/: apple_intelligence.swift  apple_intelligence_stub.swift
desktop/src/pages/: History.tsx  Home.tsx  Onboarding.tsx  Settings.tsx
desktop/tests/eval/: meaning_preservation.json  stt_accuracy.json
docs/: ARCHITECTURE.md  COMPETITIVE_MATRIX.md  RELEASE.md  ROADMAP.md  SPEC.md  USER_TEST_MATRIX.md
docs/research/: handy-analysis.md  handy-ui-analysis.md  llm-polish-runtime.md  small-competitors-analysis.md  stt-accuracy-2026-07-15.md  typeless-black-box-2026-07-12.md
prototype/: build_indicator.sh  history.py  mic_indicator.swift  requirements.txt
prototype/tests/: test_history.py
tests/: test_config.py  test_integration.py  test_state_machine.py
