[package]
name = "claro"
version = "0.1.0"
description = "Claro — local-first voice input with context-aware polishing"
authors = ["Claro contributors"]
edition = "2021"

[lib]
name = "claro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
crossbeam-channel = "0.5"
chrono = "0.4"
ctrlc = { version = "3", features = ["termination"] }
ferrous-opencc = "0.4"
dirs = "6"
cpal = "0.16"
rubato = "0.16.2"
handy-keys = "0.2.4"
arboard = "3"
enigo = "0.6.1"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
# Whisper 家族走 transcribe-cpp（GGUF/ggml，Metal）；ONNX 家族（M2：SenseVoice 等）再加 transcribe-rs
transcribe-cpp = { version = "0.1.1", default-features = false, features = ["metal"] }
macos-accessibility-client = "0.0.1"
