[package]
name = "claro"
version = "0.1.0"
description = "Claro — local-first voice input with context-aware polishing"
authors = ["Claro contributors"]
edition = "2021"

[lib]
name = "claro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
# 公開 bundle 不帶本機符號表；release workflow 另以 remap-path-prefix 清除編譯路徑。
strip = "symbols"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
crossbeam-channel = "0.5"
chrono = "0.4"
ctrlc = { version = "3", features = ["termination"] }
ferrous-opencc = "0.4"
dirs = "6"
cpal = "0.16"
rubato = "0.16.2"
handy-keys = "0.2.4"
arboard = "3"
enigo = "0.6.1"
ureq = { version = "2", features = ["json"] }
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
libc = "0.2"

[dev-dependencies]
hound = "3.5"

[target.'cfg(target_os = "macos")'.dependencies]
# Whisper 家族走 transcribe-cpp（GGUF/ggml，Metal）；ONNX 家族（M2：SenseVoice 等）再加 transcribe-rs
transcribe-cpp = { version = "0.1.1", default-features = false, features = ["metal"] }
# 內建 LLM 潤飾（llm.rs）：llama.cpp in-process，Metal。
# 精確鎖定：caret 曾把 0.1.122 偷升到 0.1.150（vendored llama.cpp 的
# cpp-httplib 需要 OpenSSL 標頭，CI runner 沒有就炸）——版本升級必須是
# 顯式決定＋CI 驗證，不能由 cargo update 順手帶走。0.1.122 已與現行
# 依賴圖不相容，本專案實測基準為 0.1.150。
llama-cpp-2 = { version = "=0.1.150", features = ["metal"] }
macos-accessibility-client = "0.0.1"
# AX 上下文擷取（context.rs）：CF 型別＋NSWorkspace 前景 app（版本對齊 tauri 依賴樹）
core-foundation = "0.10"
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = [
    "NSApplication",
    "NSPasteboard",
    "NSPasteboardItem",
    "NSRunningApplication",
    "NSWorkspace",
] }
objc2-foundation = "0.3"
